--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
 
   cupertino_icons: ^0.1.2
   animated_text_kit: ^1.3.1
+  firebase_core: ^0.4.0+3
+  firebase_auth: ^0.15.0+1
+  cloud_firestore: ^0.12.10+2
 
 dev_dependencies:
   flutter_test:
